add git deploy page

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "storegg-app",
   "private": true,
+  "homepage": "http://stryow22.github.io/storegg-bwa",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "aos": "^2.3.4",
@@ -35,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
     "typescript": "4.5.2"
   }
 }
