--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@swc/cli": "^0.1.52",
+    "@swc/core": "^1.2.113",
     "@types/aos": "^3.0.4",
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
